--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "16.0.4",
     "@angular/platform-browser-dynamic": "16.0.4",
     "@angular/router": "16.0.4",
+    "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "0.13.0"
@@ -39,6 +40,8 @@
     "@angular-eslint/template-parser": "16.0.3",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "16.0.4",
+    "@nx/angular": "16.3.2",
+    "@nx/workspace": "16.3.2",
     "@schematics/angular": "16.0.4",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.15.11",
@@ -53,13 +56,11 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "nx": "16.3.2",
+    "nx-cloud": "16.0.5",
     "protractor": "~7.0.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "ts-node": "~10.9.1",
-    "typescript": "5.0.4",
-    "nx-cloud": "16.0.5",
-    "@nx/workspace": "16.3.2",
-    "@nx/angular": "16.3.2"
+    "typescript": "5.0.4"
   }
 }
