--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.4.4",
+    "@nestjs/swagger": "^7.1.6",
     "@nestjs/websockets": "^8.4.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
