--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,54 +13,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.0.4",
-    "@angular/cdk": "16.0.3",
-    "@angular/common": "16.0.4",
-    "@angular/compiler": "16.0.4",
-    "@angular/core": "16.0.4",
-    "@angular/forms": "16.0.4",
-    "@angular/material": "16.0.3",
-    "@angular/material-moment-adapter": "16.0.3",
-    "@angular/platform-browser": "16.0.4",
-    "@angular/platform-browser-dynamic": "16.0.4",
-    "@angular/router": "16.0.4",
+    "@angular/animations": "17.3.12",
+    "@angular/cdk": "17.3.10",
+    "@angular/common": "17.3.12",
+    "@angular/compiler": "17.3.9",
+    "@angular/core": "17.3.12",
+    "@angular/forms": "17.3.9",
+    "@angular/material": "17.3.10",
+    "@angular/material-moment-adapter": "17.3.10",
+    "@angular/platform-browser": "17.3.12",
+    "@angular/platform-browser-dynamic": "17.3.12",
+    "@angular/router": "17.3.12",
     "ngx-socket-io": "^4.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.0",
-    "zone.js": "0.13.0"
+    "zone.js": "0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.0.4",
-    "@angular-devkit/core": "16.0.4",
-    "@angular-devkit/schematics": "16.0.4",
+    "@angular-devkit/build-angular": "17.3.11",
+    "@angular-devkit/core": "17.3.11",
+    "@angular-devkit/schematics": "17.3.11",
     "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "16.0.3",
-    "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/schematics": "16.0.3",
-    "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "~16.0.0",
-    "@angular/compiler-cli": "16.0.4",
-    "@nx/angular": "16.3.2",
-    "@nx/workspace": "16.3.2",
-    "@schematics/angular": "16.0.4",
+    "@angular-eslint/eslint-plugin": "17.5.3",
+    "@angular-eslint/eslint-plugin-template": "17.5.3",
+    "@angular-eslint/schematics": "17.5.3",
+    "@angular-eslint/template-parser": "17.5.3",
+    "@angular/cli": "~17.3.11",
+    "@angular/compiler-cli": "17.3.12",
+    "@nx/angular": "17.3.2",
+    "@nx/workspace": "17.3.2",
+    "@schematics/angular": "17.3.11",
     "@types/jasmine": "^4.3.1",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "5.57.1",
-    "@typescript-eslint/parser": "5.57.1",
+    "@types/node": "18.16.20",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "eslint": "^8.38.0",
-    "jasmine-core": "4.6.0",
+    "jasmine-core": "4.6.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "nx": "16.3.2",
-    "nx-cloud": "16.0.5",
+    "nx": "17.3.2",
+    "nx-cloud": "19.1.0",
     "protractor": "~7.0.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "ts-node": "~10.9.1",
-    "typescript": "5.0.4"
+    "typescript": "5.3.3"
   }
 }
