--- a/frontend/project.json
+++ b/frontend/project.json
@@ -66,18 +66,18 @@
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
       "options": {
-        "browserTarget": "frontend:build"
+        "buildTarget": "frontend:build"
       },
       "configurations": {
         "production": {
-          "browserTarget": "frontend:build:production"
+          "buildTarget": "frontend:build:production"
         }
       }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "frontend:build"
+        "buildTarget": "frontend:build"
       }
     },
     "test": {
