--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "@angular-eslint/eslint-plugin-template": "17.5.3",
     "@angular-eslint/schematics": "17.5.3",
     "@angular-eslint/template-parser": "17.5.3",
-    "@angular/cli": "~17.3.11",
+    "@angular/cli": "17.3.9",
     "@angular/compiler-cli": "17.3.12",
     "@nx/angular": "17.3.2",
     "@nx/workspace": "17.3.2",
